--- a/HTML/faq.html
+++ b/HTML/faq.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Glossário - Distrowatch Minimal</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>FAQ - Distrowatch Minimal</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
 <header class="main-header">
     <div class="container header-container">
         <div class="logo">
-            <img src="logo.png" alt="Distrowatch Logo" class="logo-image">
+            <img src="../images/logo.png" alt="Distrowatch Logo" class="logo-image">
         </div>
         <nav class="main-nav">
             <ul>
@@ -29,15 +29,17 @@
 </header>
 
 <main class="container main-content">
-    <section class="glossary">
-        <h2>Glossário</h2>
-        <p>Este é o glossário com termos relacionados às distribuições Linux:</p>
-        <ul>
-            <li><strong>Kernel</strong>: O núcleo do sistema operacional que faz a ponte entre o software e o hardware.</li>
-            <li><strong>GNOME</strong>: Um ambiente de desktop usado em diversas distribuições.</li>
-            <li><strong>Pacotes</strong>: Programas e bibliotecas que podem ser instalados em uma distribuição.</li>
-            <!-- Adicione mais termos conforme necessário -->
-        </ul>
+    <section class="faq">
+        <h2>FAQ - Perguntas Frequentes</h2>
+        <div class="faq-item">
+            <h3>O que é uma distribuição Linux?</h3>
+            <p>Uma distribuição Linux é uma versão do sistema operacional Linux que inclui o kernel e software adicional.</p>
+        </div>
+        <div class="faq-item">
+            <h3>Qual distribuição devo escolher?</h3>
+            <p>Isso depende do seu uso. Distribuições como o Ubuntu são amigáveis para iniciantes, enquanto Fedora e Debian são populares para servidores.</p>
+        </div>
+        <!-- Adicione mais perguntas e respostas conforme necessário -->
     </section>
 </main>
 
