--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Distrowatch Remake</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         #pagination {
@@ -65,7 +65,7 @@
 <header class="main-header">
     <div class="container header-container">
         <div class="logo">
-            <img src="logo.png" alt="Distrowatch Logo" class="logo-image">
+            <img src="../images/logo.png" alt="Distrowatch Logo" class="logo-image">
         </div>
         <nav class="main-nav">
             <ul>
@@ -118,11 +118,19 @@
             </article>
         </div>
         <!-- Pagination Buttons -->
-        <div id="pagination">
-            <button id="prev" disabled><i class="bi bi-arrow-left-circle"></i></button>
-            <span id="page-number">1</span>
-            <button id="next"><i class="bi bi-arrow-right-circle"></i></button>
-        </div>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+              <li class="page-item disabled">
+                <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+              </li>
+            </ul>
+          </nav>
     </section>
 </main>
 
@@ -138,77 +146,6 @@
         </ul>
     </div>
 </footer>
-
-<script>
-// Pagination Script
-document.addEventListener('DOMContentLoaded', () => {
-    const articlesPerPage = 5;
-    const articles = document.querySelectorAll('.news-item');
-    const totalPages = Math.ceil(articles.length / articlesPerPage);
-    let currentPage = 1;
-
-    const prevButton = document.getElementById('prev');
-    const nextButton = document.getElementById('next');
-    const pageNumberDisplay = document.getElementById('page-number');
-
-    function showPage(page) {
-        const start = (page - 1) * articlesPerPage;
-        const end = start + articlesPerPage;
-
-        articles.forEach((article, index) => {
-            article.style.display = (index >= start && index < end) ? 'block' : 'none';
-        });
-
-        prevButton.disabled = page === 1;
-        nextButton.disabled = page === totalPages;
-        pageNumberDisplay.textContent = page;
-
-        // Animation for articles appearance
-        articles.forEach(article => {
-            article.style.opacity = '0';
-            setTimeout(() => { article.style.opacity = '1'; }, 100);
-        });
-    }
-
-    prevButton.addEventListener('click', () => {
-        if (currentPage > 1) {
-            currentPage--;
-            showPage(currentPage);
-        }
-    });
-
-    nextButton.addEventListener('click', () => {
-        if (currentPage < totalPages) {
-            currentPage++;
-            showPage(currentPage);
-        }
-    });
-
-    // Initialize the first page
-    showPage(currentPage);
-});
-
-document.addEventListener('DOMContentLoaded', () => {
-    const searchInput = document.getElementById('search-input');
-    const articles = document.querySelectorAll('.news-item');
-
-    searchInput.addEventListener('input', () => {
-        const query = searchInput.value.toLowerCase();
-
-        articles.forEach(article => {
-            const title = article.querySelector('h3').textContent.toLowerCase();
-            const description = article.querySelector('p').textContent.toLowerCase();
-
-            if (title.includes(query) || description.includes(query)) {
-                article.style.display = 'block';
-            } else {
-                article.style.display = 'none';
-            }
-        });
-    });
-});
-
-</script>
 
 </body>
 </html>
