--- a/HTML/rankings.html
+++ b/HTML/rankings.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Rankings - Distrowatch Minimal</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
 <header class="main-header">
     <div class="container header-container">
         <div class="logo">
-            <img src="logo.png" alt="Distrowatch Logo" class="logo-image">
+            <img src="../images/logo.png" alt="Distrowatch Logo" class="logo-image">
         </div>
         <nav class="main-nav">
             <ul>
